--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,6 @@
+/* ----------------------------------------------------------------- */
+/* MAIN SET UP */
+/* ----------------------------------------------------------------- */
 * {
     margin: 0;
     padding: 0;
@@ -16,4 +19,108 @@ html {
 .row {
     max-width: 1140;
     margin: 0 auto; 
+}
+
+header {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(images/hero.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+/* ----------------------------------------------------------------- */
+/* HEADER/HERO */
+/* ----------------------------------------------------------------- */
+.hero-text-box {
+    position: absolute;
+    width: 1140px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.logo {
+    height: 100px;
+    width: auto;
+    float: left;
+    margin-top: 20px;
+}
+
+.main-nav {
+    float: right;
+    list-style: none;
+    margin-top: 50px;
+}
+
+.main-nav li {
+    display: inline-block;
+    margin-left: 40px;
+}
+
+.main-nav li a:link,
+.main-nav li a:visited {
+    padding: 8px 8px;
+    color: rgb(209, 209, 209);
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 90%;
+    border-bottom: 2px solid transparent;
+    transition: border-bottom 0.3s;
+}
+
+.main-nav li a:hover,
+.main-nav li a:active {
+    border-bottom: 2px solid #27ae60;
+}
+
+h1 {
+    margin-top: 0;
+    margin-bottom: 20px;
+    color: rgb(209, 209, 209);
+    font-size: 240%;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    word-spacing: 4px;
+}
+/* ----------------------------------------------------------------- */
+/* BUTTONS */
+/* ----------------------------------------------------------------- */
+.btn:link,
+.btn.visited {
+    display: inline-block;
+    padding: 10px 30px;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 100px; 
+    transition: background-color 0.3s, border 0.3s, color 0.3s;
+}
+
+.btn-full:link,
+.btn-full:visited {
+    background-color: #27ae60;
+    border: 1px solid #27ae60;
+    color: rgb(209, 209, 209);
+    margin-right: 15px;
+}
+
+.btn-ghost:link,
+.btn-ghost:visited {
+    border: 1px solid #27ae60;
+    color: #27ae60;
+}
+
+.btn:hover,
+.btn:active {
+    background-color: #17693a;
+}
+
+.btn-full:hover,
+.btn-full:active {
+    border: 1px solid #17693a;
+}
+
+.btn-ghost:hover,
+.btn-ghost:active {
+    border: 1px solid #17693a;
+    color: rgb(209, 209, 209);
 }
