--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,6 +16,15 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+.clear-fix {zoom: 1}
+.clearfix:after {
+    content: '.';
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
+}
+
 .row {
     max-width: 1140;
     margin: 0 auto; 
@@ -26,6 +35,11 @@ html {
 
 }
 
+.section-features {
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
 .box {
     padding: 1%;
 }
@@ -34,7 +48,9 @@ header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(images/hero.jpg);
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
     height: 100vh;
+    
 }
 /* ----------------------------------------------------------------- */
 /* HEADER/HERO */
@@ -183,4 +199,99 @@ h3 {
 .btn-ghost:active {
     border: 1px solid #17693a;
     color: rgb(209, 209, 209);
+}
+
+/* Features */
+
+.section-features .long-copy {
+    margin: 30px;
+}
+
+/* Grid without using CSS Grid ** will update CSS grid style */
+
+.section-meals {
+    padding: 0;
+    padding-bottom: 80px;
+}
+
+.meals-showcase {
+    list-style: none;
+    width: 100%;
+
+}
+
+.meals-showcase li {
+    display: block;
+    float: left;
+    width: 25%;
+}
+
+.meal-photo {
+    width: 100%;
+    margin: 0;
+    overflow: hidden;
+    background-color: #000;
+}
+
+.meal-photo img {
+    opacity: 0.7;
+    width: 100%;
+    height: auto;
+    transform: scale(1.15);
+    transition: transform 0.25s, opacity 0.25s;
+}
+
+.meal-photo img:hover {
+    opacity: 1;
+    transform: scale(1.03);
+
+}
+
+/* How it works section */
+
+.hiw-section {
+    background-color: #f4f4f4;
+}
+
+.steps-box:first-child {
+    text-align: right;
+    padding-right: 3%;
+    margin-top: 30px;
+}
+
+.steps-box:last-child {
+    padding-left: 3%;
+    margin-top: 70px;
+}
+
+.app-screen {
+    width: 40%;
+}
+
+.works-step {
+    margin-bottom: 50px;
+}
+
+.works-step:last-of-type {
+    margin-bottom: 80px;
+}
+
+.works-step div {
+    color: #17693a;
+    border: 2px solid #17693a;
+    display: inline-block;
+    border-radius: 50%;
+    height: 50px;
+    width: 55px;
+    text-align: center;
+    padding: 5px;
+    float: left;
+    font-size: 150%;
+    margin-right: 25px;
+}
+
+.btn-app img {
+    height: 50px;
+    width: auto;
+    margin-right: 10px;
 }
